# 02501_ADLCV_project

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  ToDos.md  pyproject.toml  tasks.py
.devcontainer/: devcontainer.json
.github/instructions/: *.instructions.md
.github/workflows/: linting.yaml  pre_commit.yaml
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
src/detgpt/: __init__.py  box_utils.py  cat_inspection.py  data.py  debug_candidates.py  defrcn_baseline.py  demo_data.py  device.py  evaluate.py  fsod_data.py  fsod_export.py  fusion.py  lvis_api.py  metrics.py  model.py  run_fsod.py  support_samples.py  test_data.py  text_from_vision.py  tfa_baseline.py  train.py  visualize.py  yolo_world.py
src/detgpt/debug_verify_crops/: debug_dog.txt
tests/: test_box_utils.py  test_data.py  test_lvis_api.py  test_qwen_generation.py
