[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "detgpt"
version = "0.0.1"
description = "In context object detection via visual example prompting on VLMs"
authors = [
  { name = "group_13", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "torch>=2.10",
    "torchinfo>=1.8",
    "torchvision>=0.25.0",
    "typer>=0.15.1",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "invoke>=2.2.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.7",
    "mkdocs-material>=9.7.1",
    "mkdocstrings-python>=2.0.1",
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform != 'darwin'" },
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform != 'darwin'" },
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.coverage.run]
omit = ["tests/*"]
